--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -40,4 +44,5 @@ a {
 button {
   border: none;
   outline: none;
+  cursor: pointer;
 }
