--- a/styles/header.css
+++ b/styles/header.css
@@ -16,6 +16,7 @@ header {
   flex-direction: column;
   justify-content: space-between;
   margin-bottom: 50px;
+  width: 100%;
 }
 
 .logo {
@@ -31,7 +32,7 @@ header {
 
 nav {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 10px;
 }
@@ -52,6 +53,16 @@ nav ul li a {
 
 nav ul li a:hover {
   border-bottom: 1px solid #2196f3;
+}
+nav.active {
+  animation: scrollAnimation 0.5s linear;
+  box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+    rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+    rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  position: fixed;
+  transition: all 0.5s ease-in-out;
+  width: 100%;
+  background-color: black;
 }
 
 .header-middle {
@@ -141,5 +152,20 @@ h1 {
   100% {
     top: 90%;
     opacity: 0;
+  }
+}
+
+@keyframes scrollAnimation {
+  0% {
+    -webkit-transform: translateY(-150px);
+    transform: translateY(-150px);
+  }
+  50% {
+    -webkit-transform: translateY(-100px);
+    transform: translateY(-100px);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
   }
 }
