--- a/styles/header.css
+++ b/styles/header.css
@@ -1,7 +1,7 @@
 header {
   width: 100vw;
   height: 100vh;
-  background-image: url(../assets/bckgrnd.jpg);
+  background-image: url(../assets/bckgrnd.webp);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
