--- a/styles/loader.css
+++ b/styles/loader.css
@@ -2,6 +2,9 @@
   position: relative;
   width: 100%;
   height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background-color: black;
   animation: changeColor 1s linear infinite;
   z-index: 11;
